ar: implement data transfer to ARC; add AR styling; update ARC dependency

--- a/adhocracy-plus/assets/scss/_variables.scss
+++ b/adhocracy-plus/assets/scss/_variables.scss
@@ -35,6 +35,7 @@ $text-muted:    $text-color-gray !default;
 
 $blue-light: #d6eff9;
 $purple-light: #ecdbff;
+$purple-lighter: #EEEFFB;
 $green-light: #e0fbe2;
 
 $print-black: #000 !default;
