--- a/adhocracy-plus/assets/scss/components/_button.scss
+++ b/adhocracy-plus/assets/scss/components/_button.scss
@@ -140,6 +140,12 @@
     text-align: left;
 }
 
+.btn--centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .btn--danger {
     @extend .btn-danger;
 }
