--- a/adhocracy-plus/assets/scss/style.scss
+++ b/adhocracy-plus/assets/scss/style.scss
@@ -74,6 +74,7 @@
 @import "components/blocks";
 @import "components/breadcrumbs";
 @import "components/button";
+@import "components/button_group";
 @import "components/category_formset";
 @import "components/captcheck";
 @import "components/cms";
