--- a/apps/topicprio/templates/a4_candy_topicprio/topic_detail.html
+++ b/apps/topicprio/templates/a4_candy_topicprio/topic_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n rules react_comments_async module_tags react_ratings wagtailcore_tags thumbnail static %}
+{% load i18n rules react_comments_async module_tags react_ratings wagtailcore_tags thumbnail static react_augmentedreality %}
 
 {% block extra_js %}
     {{ block.super }}
@@ -37,6 +37,10 @@
 
             <div class="item-detail">
                 <h1 class="item-detail__title">{{ object.name }}</h1>
+                <p class="badge badge--note">
+                    <img src="{% static '/images/ar_icon.svg' %}" alt="" height="12" width="12"/>
+                    {% trans "Augmented Reality" %}
+                </p>
 
                 {% if object.category or object.labels %}
                     <div class="item-detail__labels">
@@ -59,9 +63,12 @@
                             {{ object.description | richtext }}
                         </div>
                     </div>
+                    <p class="alert alert--note">
+                        {% trans "To access AR Mode, you must be physically present at the location. AR objects are only visible when you're in their vicinity. Your GPS location is used to verify your presence at the site." %}
+                    </p>
                 </div>
 
-                <div data-arpas-widget="arc"></div>
+                {% react_augmentedreality_arc topic=object %}
 
                 <div class="item-detail__actions lr-bar">
                     {% if object|has_feature:"rate" %}
