--- a/apps/topicprio/templates/a4_candy_topicprio/topic_detail.html
+++ b/apps/topicprio/templates/a4_candy_topicprio/topic_detail.html
@@ -38,7 +38,7 @@
             <div class="item-detail">
                 <h1 class="item-detail__title">{{ object.name }}</h1>
                 <p class="badge badge--note">
-                    <img src="{% static '/images/ar_icon.svg' %}" alt="" height="12" width="12"/>
+                    <img src="{% static 'images/ar_icon.svg' %}" alt="" height="12" width="12"/>
                     {% trans "Augmented Reality" %}
                 </p>
 
