--- a/adhocracy-plus/assets/scss/components/_header_upper.scss
+++ b/adhocracy-plus/assets/scss/components/_header_upper.scss
@@ -11,8 +11,21 @@
 
 .header-upper__brand-img {
     display: block;
-    height: 2rem;
+    height: 3rem;
     width: auto;
+
+    &--mobile {
+        height: 2rem;
+        @media (min-width: $breakpoint) {
+            display:none;
+        }
+    }
+     &--desktop {
+        @media (max-width: $breakpoint) {
+            display:none;
+        }
+    }
+
 }
 
 .header-upper__lang {
@@ -57,8 +70,3 @@
     content: "\f00d";
 }
 
-@media screen and (min-width: $breakpoint) {
-    .header-upper__brand-img {
-        height: 2.5rem;
-    }
-}
